--- a/code/public/index.html
+++ b/code/public/index.html
@@ -2,13 +2,15 @@
 
 <head>
   <title>Express</title>
-  <link rel="stylesheet" href="/stylesheets/style.css">
-  <script src="javascripts/events.js"></script>
+  <link rel="stylesheet" href="/stylesheets/index.css">
+  <script src="javascripts/index.js"></script>
 </head>
 
 <body>
-  <h1>Express</h1>
-  <p>Test</p>
+  <header>Tactical Combat Planner</header>
+  <main id="main"> 
+    
+  </main>
 </body>
 
 </html>
