--- a/code/public/Links/event.html
+++ b/code/public/Links/event.html
@@ -2,23 +2,23 @@
 
 <head>
   <title>Express</title>
-  <link rel="stylesheet" href="/stylesheets/headerNav.css">
-  <script src="javascripts/events.js"></script>
+  <link rel="stylesheet" href="../stylesheets/headerNav.css">
+  <script src="../javascripts/events.js"></script>
 </head>
 
 <body class="grid-container">
   <header class="header">Tactical Combat Planner</header>
   <nav class="nav">
     <div class="navItem">
-      <img src="images/map.png" width="40" height="40">
+      <img src="../images/map.png" width="40" height="40">
       <a>Map</a>
     </div>
     <div class="navItem">
-      <img src="images/calendar.png" width="40" height="40">
+      <img src="../images/calendar.png" width="40" height="40">
       <a>Events</a>
     </div>
     <div class="navItem">
-      <img src="images/group.png" width="40" height="40">
+      <img src="../images/group.png" width="40" height="40">
       <a>Team</a>
     </div>
   </nav>
