--- a/code/public/index.html
+++ b/code/public/index.html
@@ -1,16 +1,31 @@
 <html>
 
 <head>
-  <title>Express</title>
-  <link rel="stylesheet" href="/stylesheets/index.css">
+  <title>Tactical Combat Planner</title>
+  <link rel="stylesheet" href="stylesheets/default.css">
   <script src="javascripts/index.js"></script>
 </head>
 
 <body>
-  <header>Tactical Combat Planner</header>
-  <main id="main"> 
-    
+  <header>
+    <span></span>
+    <span id='titleheader'>TACTICAL COMBAT PLANNER</span>
+    <span id='userboxHeader'>
+      <span id='userimageHeader'><img src="images/userImage.png" height='50'></span>
+      <span id='userNameHeader'>John Doe</span>
+      <span id='logoutheader'><img src="images/on-off-button.png" height='50'></span>
+    </span>
+  </header>
+  <nav id='navItems'>
+
+  </nav>
+  <main> 
+    <span id='map'><img src="images/MapExample.jpg"> </span>
   </main>
+  <footer>
+		<div class="footerdivs">Contact us by email: <a href="mailto:fernandolamarsantos@gmail.com"> fernandolamarsantos@gmail.com</a> or <a href="mailto:jaimeferreira2000@gmail.com"> jaimeferreira2000@gmail.com</a></div>
+	</footer>
+	
 </body>
 
 </html>
