--- a/code/public/Links/team.html
+++ b/code/public/Links/team.html
@@ -4,8 +4,10 @@
   <title>Express</title>
   <link rel="stylesheet" href="../stylesheets/default.css">
   <link rel="stylesheet" href="../stylesheets/team.css">
-  <script src="../javascripts/default.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="../javascripts/team.js"></script>
+  <link rel = "icon" href = "../images/on-off-button.png"  type = "image/x-icon">
+  
 </head>
 
 <body>
