--- a/code/public/index.html
+++ b/code/public/index.html
@@ -4,6 +4,7 @@
   <title>Tactical Combat Planner</title>
   <link rel="stylesheet" href="stylesheets/default.css">
   <script src="javascripts/index.js"></script>
+  <link rel = "icon" href = "images/on-off-button.png"  type = "image/x-icon">
 </head>
 
 <body>
