3a entrega + avanços no projeto 13/12/2020
3a entrega incompleta, faltando analise de sistemas.
+Buscar equipas de um jogador específico
+Buscar todas as equipas
+pagina "selected teams"

--- a/code/public/Links/selectedTeam.html
+++ b/code/public/Links/selectedTeam.html
@@ -1,20 +1,18 @@
 <html>
 
 <head>
-  <meta charset="utf-8" />
-  <title>Tactical Combat Planner</title>
+  <title>Express</title>
   <link rel="stylesheet" href="../stylesheets/default.css">
-  <link rel="stylesheet" href="../stylesheets/team.css">
+  <link rel="stylesheet" href="../stylesheets/selectedTeam.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="../javascripts/team.js"></script>
+  <script src="../javascripts/selectedTeam.js"></script>
   <link rel = "icon" href = "../images/on-off-button.png"  type = "image/x-icon">
   
-
 </head>
 
 <body>
   <header>
-    <span></span>
+    <span id='backpageheader'><img src="../images/backpage.png" height='50'></span>
     <span id='titleheader'>TACTICAL COMBAT PLANNER</span>
     <span id='userboxHeader'>
       <span id='userimageHeader'><img src="../images/userImage.png" height='50'></span>
@@ -22,9 +20,7 @@
       <span id='logoutheader'><img src="../images/on-off-button.png" height='50'></span>
     </span>
   </header>
-  <nav id='navItems'>
 
-  </nav>
   <main> 
     <div id='teamDivItems'></div>
     
