Entregas de AS, Update na BD(Role e ranking), video de entrada

--- a/code/public/index.html
+++ b/code/public/index.html
@@ -21,7 +21,10 @@
 
   </nav>
   <main> 
-    <span id='map'><img src="images/MapExample.jpg"> </span>
+    <video width="100%" autoplay loop muted playsinline>
+      <source src="images/video_preview_h264.mp4" type="video/mp4">
+    </video>
+
   </main>
   <footer>
 		<div class="footerdivs">Contact us by email: <a href="mailto:fernandolamarsantos@gmail.com"> fernandolamarsantos@gmail.com</a> or <a href="mailto:jaimeferreira2000@gmail.com"> jaimeferreira2000@gmail.com</a></div>
