primeiro post, criar equipas a partir do client side . fix de erros

--- a/code/public/Links/event.html
+++ b/code/public/Links/event.html
@@ -14,7 +14,7 @@
 
 <body>
   <header>
-    <span></span>
+    <span id='logoheader'><img src="../images/TCPlogo.png" height='100'></span>
     <span id='titleheader'>TACTICAL COMBAT PLANNER</span>
     <span id='userboxHeader'>
       <span id='userimageHeader'><img src="../images/userImage.png" height='50'></span>
