--- a/code/public/Links/eventLobby.html
+++ b/code/public/Links/eventLobby.html
@@ -1,5 +1,6 @@
 <body>
     <header>
+        <span id='logoheader'><img src="../images/TCPlogo.png" height='100'></span>
         <span id='backpageheader'><img src="../images/backpage.png" height='50'></span>
         <span id='titleheader'>TACTICAL COMBAT PLANNER</span>
         <span id='userboxHeader'>
