--- a/code/public/index.html
+++ b/code/public/index.html
@@ -9,13 +9,13 @@
 
 <body>
   <header>
-    <span></span>
-    <span id='titleheader'>TACTICAL COMBAT PLANNER</span>
-    <span id='userboxHeader'>
-      <span id='userimageHeader'><img src="images/userImage.png" height='50'></span>
-      <span id='userNameHeader'>John Doe</span>
-      <span id='logoutheader'><img src="images/on-off-button.png" height='50'></span>
-    </span>
+      <span id='logoheader'><img src="images/TCPlogo.png" height='100'></span>
+      <span id='titleheader'>TACTICAL COMBAT PLANNER</span>
+      <span id='userboxHeader'>
+        <span id='userimageHeader'><img src="images/userImage.png" height='50'></span>
+        <span id='userNameHeader'>John Doe</span>
+        <span id='logoutheader'><img src="images/on-off-button.png" height='50'></span>
+      </span>
   </header>
   <nav id='navItems'>
 
