--- a/code/public/Links/selectedTeam.html
+++ b/code/public/Links/selectedTeam.html
@@ -12,7 +12,7 @@
 
 <body>
   <header>
-    <span id='backpageheader'><img src="../images/backpage.png" height='50'></span>
+    <span id='logoheader'><img src="../images/TCPlogo.png" height='100'></span>
     <span id='titleheader'>TACTICAL COMBAT PLANNER</span>
     <span id='userboxHeader'>
       <span id='userimageHeader'><img src="../images/userImage.png" height='50'></span>
