--- a/code/public/Links/map.html
+++ b/code/public/Links/map.html
@@ -4,24 +4,27 @@
 <meta charset="utf-8" />
 <title>Show drawn polygon area</title>
 <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no" />
+
+
 <link rel="stylesheet" href="../stylesheets/map.css">
 <script src="https://api.mapbox.com/mapbox-gl-js/v2.0.0/mapbox-gl.js"></script>
 <link href="https://api.mapbox.com/mapbox-gl-js/v2.0.0/mapbox-gl.css" rel="stylesheet" />
 <script src="https://api.tiles.mapbox.com/mapbox.js/plugins/turf/v3.0.11/turf.min.js"></script>
 <script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-draw/v1.2.0/mapbox-gl-draw.js"></script>
-<link
-rel="stylesheet"
-href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-draw/v1.2.0/mapbox-gl-draw.css"
-type="text/css"
-/>
+<link rel="stylesheet" href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-draw/v1.2.0/mapbox-gl-draw.css" type="text/css"/>
+<script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v4.5.1/mapbox-gl-geocoder.min.js"></script>
+<link rel="stylesheet" href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v4.5.1/mapbox-gl-geocoder.css" type="text/css"/>
 <script src="../javascripts/mapbox.js"></script>
 </head>
 <body>
+<main>
+  <div id="map"></div>
+  <pre id="info"></pre>
+  <div class="calculation-box">
+  <p>Draw a polygon using the draw tools.</p>
+  <div id="calculated-area"></div>
+  </div>
+</main>
 
-<div id="map"></div>
-<div class="calculation-box">
-<p>Draw a polygon using the draw tools.</p>
-<div id="calculated-area"></div>
-</div>
 </body>
 </html>
