notifications style, notif button e receber as notificaçoes de players da DB

--- a/code/public/Links/map.html
+++ b/code/public/Links/map.html
@@ -17,6 +17,8 @@
 <script src="../javascripts/mapbox.js"></script>
 </head>
 <body>
+<nav id='navItems'>
+</nav>
 <main>
   <div id="map"></div>
   <pre id="info"></pre>
