--- a/code/public/Links/team.html
+++ b/code/public/Links/team.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="../stylesheets/default.css">
   <link rel="stylesheet" href="../stylesheets/team.css">
   <link rel="stylesheet" href="../stylesheets/forms.css">
+  <link rel="stylesheet" href="../stylesheets/dropdown.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="../javascripts/team.js"></script>
   <link rel = "icon" href = "../images/on-off-button.png"  type = "image/x-icon">
@@ -20,6 +21,7 @@
     <span id='userboxHeader'>
       <span id='userimageHeader'><img src="../images/userImage.png" height='50'></span>
       <span id='userNameHeader'>John Doe</span>
+      <span id='notifButton'></span>
       <span id='logoutheader'><img src="../images/on-off-button.png" height='50'></span>
     </span>
   </header>
