+ Event Lobby structure

--- a/code/public/Links/eventLobby.html
+++ b/code/public/Links/eventLobby.html
@@ -1,3 +1,15 @@
+<head>
+  <meta charset="utf-8" />
+  <title>Tactical Combat Planner</title>
+  <link rel="stylesheet" href="../stylesheets/default.css">
+  <link rel="stylesheet" href="../stylesheets/eventLobby.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="../javascripts/eventLobby.js"></script>
+  <link rel = "icon" href = "../images/on-off-button.png"  type = "image/x-icon">
+  
+
+</head>
+
 <body>
     <header>
         <span id='logoheader'><img src="../images/TCPlogo.png" height='100'></span>
@@ -9,4 +21,19 @@
           <span id='logoutheader'><img src="../images/on-off-button.png" height='50'></span>
         </span>
       </header>
+
+    <nav class="eventlobbynav" id="eventlobbynav">
+
+    </nav >
+
+    <main>
+    <div class="eventlobbymain" id="eventlobbymain">
+      
+    </div>
+    </main>
+
+    <footer>
+      <div class="footerdivs">Contact us by email: <a href="mailto:fernandolamarsantos@gmail.com"> fernandolamarsantos@gmail.com</a> or <a href="mailto:jaimeferreira2000@gmail.com"> jaimeferreira2000@gmail.com</a></div>
+    </footer>
 </body>
+
