--- a/code/public/Links/selectedTeam.html
+++ b/code/public/Links/selectedTeam.html
@@ -5,6 +5,7 @@
   <link rel="stylesheet" href="../stylesheets/default.css">
   <link rel="stylesheet" href="../stylesheets/selectedTeam.css">
   <link rel="stylesheet" href="../stylesheets/dropdown.css">
+  <link rel="stylesheet" href="../stylesheets/forms.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="../javascripts/selectedTeam.js"></script>
   <link rel = "icon" href = "../images/on-off-button.png"  type = "image/x-icon">
