--- a/code/public/Links/event.html
+++ b/code/public/Links/event.html
@@ -5,6 +5,7 @@
   <title>Tactical Combat Planner</title>
   <link rel="stylesheet" href="../stylesheets/default.css">
   <link rel="stylesheet" href="../stylesheets/event.css">
+  <link rel="stylesheet" href="../stylesheets/modalBox.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="../javascripts/event.js"></script>
   <link rel = "icon" href = "../images/on-off-button.png"  type = "image/x-icon">
