--- a/code/public/index.html
+++ b/code/public/index.html
@@ -76,7 +76,7 @@
             <img class='testImg' src="images/airsoftteams.png">
         </div>
         <div id='eventinfo' class='blackinfobox'>
-            <div class='iconblackbox'><img src="images/indexeventicon.PNG"></div>
+            <div class='iconblackbox'><img src="images/indexeventicon.png"></div>
             <div class='headerblackbox'>
                 <h2>Here is where you can manage your <br>events" <br>and around the world!</h2>
             </div>
