--- a/code/public/index.html
+++ b/code/public/index.html
@@ -78,7 +78,7 @@
         <div id='eventinfo' class='blackinfobox'>
             <div class='iconblackbox'><img src="images/indexeventicon.png"></div>
             <div class='headerblackbox'>
-                <h2>Here is where you can manage your <br>events" <br>and around the world!</h2>
+                <h2>Here is where you can manage your <br>events near you and around the world!</h2>
             </div>
             <div class='listblackbox'>
                 <h3>You can also:</h3>
