--- a/code/public/Links/eventLobby.html
+++ b/code/public/Links/eventLobby.html
@@ -2,8 +2,9 @@
   <meta charset="utf-8" />
   <title>Tactical Combat Planner</title>
   <link rel="stylesheet" href="../stylesheets/default.css">
-  <link rel="stylesheet" href="../stylesheets/eventLobby.css">
   <link rel="stylesheet" href="../stylesheets/dropdown.css">
+  <link rel="stylesheet" href="../stylesheets/forms.css">
+  <link rel="stylesheet" href="../stylesheets/eventLobby.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="../javascripts/eventLobby.js"></script>
   <link rel = "icon" href = "../images/on-off-button.png"  type = "image/x-icon">
