--- a/code/public/index.html
+++ b/code/public/index.html
@@ -61,9 +61,9 @@
             <img class='testImg' src="images/airsoftteams.png">
         </div>
         <div id='eventinfo' class='blackinfobox'>
-            <div class='iconblackbox'>events</div>
+            <div id='eventsTitle' class='iconblackbox'>events</div>
             
-            <div class='listblackbox'>
+            <div id='eventsList'class='listblackbox'>
                 <h3>You can also:</h3>
                     <p><span>>></span>  Create new events</p>
                     <p><span>>></span>  Sign up for events</p>
@@ -74,7 +74,7 @@
                 
             </div>
         <div id='eventsPointer' class='headerblackbox'>
-            <h2><mark>Here is where you can manage your events near you<br>and around the world!</mark></h2>
+            <h2 style='text-align: right;'><mark>Here is where you can manage your events near you<br>and around the world!</mark></h2>
         </div>
     </div>
     <div class='infoboxes' id='teaminfo'>
