Header for the "links" pages

--- a/code/public/Links/map.html
+++ b/code/public/Links/map.html
@@ -17,6 +17,24 @@
 <script src="../javascripts/mapbox.js"></script>
 </head>
 <body>
+  <header>
+        
+    <headernav class='menu'>
+
+                <a id='navMap' style='color: #827725;' href="map.html">map</a>
+            
+                <a id='navEvents' href="event.html">events</a>
+
+                <a id='navTeam' href="team.html">team</a>
+
+    </headernav>
+    <img id='logoheader' onclick='show(0)' src="../images/LOGOsideways.png">
+    <span id='userboxHeader'>
+        <span id='userimageHeader'><img id='userImage' src="../images/userImage.png" height='50px'></span>
+        <span id='userNameHeader'>John Doe</span>
+    </span>
+
+</header>
 <nav id='navItems'>
 </nav>
 <main>
