--- a/code/public/index.html
+++ b/code/public/index.html
@@ -14,11 +14,11 @@
         
         <headernav class='menu'>
 
-                    <a id='navMap' href="/Links/map.html">map</a>
+                    <a id='navMap' href="Links/map.html">map</a>
                 
-                    <a id='navEvents' href="/links/event.html">events</a>
+                    <a id='navEvents' href="Links/event.html">events</a>
 
-                    <a id='navTeam' href="/links/team.html">team</a>
+                    <a id='navTeam' href="Links/team.html">team</a>
  
         </headernav>
 
