--- a/code/public/Links/event.html
+++ b/code/public/Links/event.html
@@ -35,7 +35,7 @@
 </header>
   </header>
   <main> 
-    <div id='eventDivItems'></div>
+    <div class='mainContainer' id='eventDivItems'></div>
     
   </main>
  
