--- a/code/public/Links/team.html
+++ b/code/public/Links/team.html
@@ -34,7 +34,7 @@
 
 </header>
   <main> 
-    <div id='teamDivItems'></div>
+    <div class='mainContainer' id='teamDivItems'></div>
     
   </main>
   <footer>
