+design update finnished

--- a/code/public/Links/selectedTeam.html
+++ b/code/public/Links/selectedTeam.html
@@ -25,7 +25,7 @@
                 <a style='color: #827725;' id='navTeam' href="team.html">team</a>
 
     </headernav>
-    <img id='logoheader' onclick='show(0)' src="../images/LOGOsideways.png">
+    <img id='logoheader' onclick='show(0)' onmouseover="this.src='../images/LOGOsidewaysHover.PNG'" onmouseout="this.src='../images/LOGOsideways.PNG'" src="../images/LOGOsideways.PNG">
     <span id='userboxHeader'>
         <span id='userimageHeader'><img id='userImage' src="../images/userImage.png" height='50px'></span>
         <span id='userNameHeader'>John Doe</span>
