--- a/code/public/Links/tactic.html
+++ b/code/public/Links/tactic.html
@@ -1,12 +1,12 @@
+<html>
+
 <head>
   <meta charset="utf-8" />
   <title>Tactical Combat Planner</title>
   <link rel="stylesheet" href="../stylesheets/default.css">
-  <link rel="stylesheet" href="../stylesheets/dropdown.css">
-  <link rel="stylesheet" href="../stylesheets/forms.css">
-  <link rel="stylesheet" href="../stylesheets/eventLobby.css">
+  <link rel="stylesheet" href="../stylesheets/tactic.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="../javascripts/eventLobby.js"></script>
+  <script src="../javascripts/tactic.js"></script>
   <link rel = "icon" href = "../images/on-off-button.png"  type = "image/x-icon">
   
 
@@ -19,7 +19,7 @@
 
                 <a id='navMap' href="map.html">map</a>
             
-                <a style='color: #827725;' id='navEvents' href="event.html">events</a>
+                <a id='navEvents' href="event.html">events</a>
 
                 <a id='navTeam' href="team.html">team</a>
 
@@ -31,19 +31,7 @@
     </span>
 
 </header>
-
-    <nav class="eventlobbynav"  id="eventlobbynav">
-
-    </nav >
-
-    <main>
-    <div class="eventlobbymain" id="eventlobbymain">
-      
-    </div>
-    </main>
-
-    <footer>
-      <div class="footerdivs">Contact us by email: <a href="mailto:fernandolamarsantos@gmail.com"> fernandolamarsantos@gmail.com</a> or <a href="mailto:jaimeferreira2000@gmail.com"> jaimeferreira2000@gmail.com</a></div>
-    </footer>
+<main>
+</main>
 </body>
-
+</html>
