--- a/code/public/Links/map.html
+++ b/code/public/Links/map.html
@@ -31,7 +31,7 @@
     <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no" />
 
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
     <link rel="stylesheet" href="../stylesheets/map copy.css">
     <link rel="stylesheet" href="../stylesheets/forms.css">
     <link rel="stylesheet" href="../stylesheets/dropdown.css">
@@ -68,12 +68,22 @@
         <pre id="info"></pre>
         <div class="calculation-box">
             <div id='eventcreatebutton'></div>
+            <a id="downloadLink" href="" download="map.png">Download ↓</a>
             <p>Draw a polygon using the draw tools.</p>
             <div id="calculated-area"></div>
         </div>
     </main>
 
     <script src="../javascripts/mapbox.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/dom-to-image/2.6.0/dom-to-image.min.js"></script>.
+    <script src="http://cdn.jsdelivr.net/g/filesaver.js"></script>
+    <script>
+        $('#downloadLink').click(function() {
+            var img = map.getCanvas().toDataURL('image/png')
+            this.href = img
+        })
+    </script>
 </body>
 
 </html>
