--- a/code/public/Links/map.html
+++ b/code/public/Links/map.html
@@ -32,7 +32,7 @@
 
 
 
-    <link rel="stylesheet" href="../stylesheets/map copy.css">
+    <link rel="stylesheet" href="../stylesheets/map.css">
     <link rel="stylesheet" href="../stylesheets/forms.css">
     <link rel="stylesheet" href="../stylesheets/dropdown.css">
 
