--- a/code/public/Links/tactic.html
+++ b/code/public/Links/tactic.html
@@ -5,8 +5,10 @@
   <title>Tactical Combat Planner</title>
   <link rel="stylesheet" href="../stylesheets/default.css">
   <link rel="stylesheet" href="../stylesheets/tactic.css">
+  <link rel="stylesheet" href="../stylesheets/dropdown.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="../javascripts/tactic.js"></script>
+  <script src="../javascripts/notification.js"></script>
   <link rel = "icon" href = "../images/on-off-button.png"  type = "image/x-icon">
   
 
@@ -25,9 +27,10 @@
 
     </headernav>
     <img id='logoheader' onclick='show(0)' onmouseover="this.src='../images/LOGOsidewaysHover.PNG'" onmouseout="this.src='../images/LOGOsideways.PNG'" src="../images/LOGOsideways.PNG">
-    <span id='userboxHeader'>
+    <span id='userboxHeader' onclick='toggleNotif()'>
         <span id='userimageHeader'><img id='userImage' src="../images/userImage.png" height='50px'></span>
         <span id='userNameHeader'>John Doe</span>
+        <span id='badgeContainer' ></span>
     </span>
 
 </header>
