--- a/code/public/Links/tactic.html
+++ b/code/public/Links/tactic.html
@@ -1,40 +1,28 @@
 <html>
 
 <head>
-  <meta charset="utf-8" />
-  <title>Tactical Combat Planner</title>
-  <link rel="stylesheet" href="../stylesheets/default.css">
-  <link rel="stylesheet" href="../stylesheets/tactic.css">
-  <link rel="stylesheet" href="../stylesheets/dropdown.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="../javascripts/tactic.js"></script>
-  <script src="../javascripts/notification.js"></script>
-  <link rel = "icon" href = "../images/on-off-button.png"  type = "image/x-icon">
-  
+    <meta charset="utf-8" />
+    <title>Tactical Combat Planner</title>
+    <link rel="stylesheet" href="../stylesheets/default.css">
+    <link rel="stylesheet" href="../stylesheets/tactic.css">
+    <link rel="stylesheet" href="../stylesheets/dropdown.css">
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+    <script src="../javascripts/notification.js"></script>
+    <link rel="icon" href="../images/on-off-button.png" type="image/x-icon">
+
 
 </head>
 
+
 <body>
-  <header>
-        
-    <headernav class='menu'>
 
-                <a id='navMap' href="map.html">map</a>
-            
-                <a id='navEvents' href="event.html">events</a>
 
-                <a id='navTeam' href="team.html">team</a>
+    <main id='main'></main>
 
-    </headernav>
-    <img id='logoheader' onclick='show(0)' onmouseover="this.src='../images/LOGOsidewaysHover.PNG'" onmouseout="this.src='../images/LOGOsideways.PNG'" src="../images/LOGOsideways.PNG">
-    <span id='userboxHeader' onclick='toggleNotif()'>
-        <span id='userimageHeader'><img id='userImage' src="../images/userImage.png" height='50px'></span>
-        <span id='userNameHeader'>John Doe</span>
-        <span id='badgeContainer' ></span>
-    </span>
 
-</header>
-<main>
-</main>
+    <script src="../javascripts/tactic.js"></script>
 </body>
+
 </html>
