--- a/code/public/Links/eventSearch.html
+++ b/code/public/Links/eventSearch.html
@@ -27,7 +27,7 @@
                 <a id='navTeam' href="team.html">team</a>
 
     </headernav>
-    <img id='logoheader' onclick='show(0)' onmouseover="this.src='../images/LOGOsidewaysHover.PNG'" onmouseout="this.src='../images/LOGOsideways.PNG'" src="../images/LOGOsideways.PNG">
+    <img id='logoheader' onclick='show(0)' onmouseover="this.src='../images/LOGOsidewaysHoverr.png'" onmouseout="this.src='../images/LOGOsideways.PNG'" src="../images/LOGOsideways.PNG">
     <span id='userboxHeader' onclick='toggleNotif()'>
         <span id='userimageHeader'><img id='userImage' src="../images/userImage.png" height='50px'></span>
         <span id='userNameHeader'>John Doe</span>
