--- a/code/public/Links/map.html
+++ b/code/public/Links/map.html
@@ -77,13 +77,17 @@
     <script src="../javascripts/mapbox.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/dom-to-image/2.6.0/dom-to-image.min.js"></script>.
-    <script src="http://cdn.jsdelivr.net/g/filesaver.js"></script>
-    <script>
-        $('#downloadLink').click(function() {
-            var img = map.getCanvas().toDataURL('image/png')
-            this.href = img
-        })
-    </script>
+    <!-- <script src="http://cdn.jsdelivr.net/g/filesaver.js"></script>-->
+    <script type="text/javascript" src="//cdn.jsdelivr.net/canvas-toblob/0.1/canvas-toBlob.min.js"></script>
+    <script type="text/javascript" src="//cdn.rawgit.com/eligrey/FileSaver.js/1.3.3/FileSaver.min.js"></script>
+    <!-- <script>
+        
+                                    $('#downloadLink').click(function() {
+                                        var img = map.getCanvas().toDataURL('image/png')
+                                        this.href = img
+                                    })
+                       
+    </script>-->
 </body>
 
 </html>
