--- a/code/public/Links/tactic.html
+++ b/code/public/Links/tactic.html
@@ -17,9 +17,36 @@
 
 
 <body>
+    <header>
+
+        <headernav class='menu'>
+
+            <a id='navMap' href="map.html">map</a>
+
+            <a id='navEvents' href="event.html">events</a>
+
+            <a style='color: #827725;' id='navTeam' href="team.html">team</a>
+
+        </headernav>
+        <img id='logoheader' onclick='show(0)' onmouseover="this.src='../images/LOGOsidewaysHover.PNG'" onmouseout="this.src='../images/LOGOsideways.PNG'" src="../images/LOGOsideways.PNG">
+        <span id='userboxHeader' onclick='toggleNotif()'>
+            <span id='userimageHeader'><img id='userImage' src="../images/userImage.png" height='50px'></span>
+        <span id='userNameHeader'>John Doe</span>
+        <span id='badgeContainer'></span>
+        </span>
+
+    </header>
 
 
-    <main id='main'></main>
+    <main>
+        <div id='canvas'></div>
+        <div style="padding:10px">
+            <h1>Instructions:</h1>
+            <p>Use the "Open file" or the "Open URL" to upload an image <br> After it's uploaded, you may start creating your tactics with the provided tools, you can draw lines, spray, add text and even erase <br> Select "Color" and "Brush Size" for a better
+                personalization <br> Keep a backup after you finished drawing your tactic, by clicking "Save" so you can update or change the tactic later.</p>
+            <p>After you're done, you may now share this tactic with your team and/or group.</p>
+        </div>
+    </main>
 
 
     <script src="../javascripts/tactic.js"></script>
