fixed showing distinct fields while creating a new event on the map

--- a/code/public/Links/map.html
+++ b/code/public/Links/map.html
@@ -68,8 +68,7 @@
         <pre id="info"></pre>
         <div class="calculation-box">
             <div id='eventcreatebutton'></div>
-            <a id="downloadLink" href="" download="map.png">Download ↓</a>
-            <p>Draw a polygon using the draw tools.</p>
+            Draw a polygon using the draw tools.
             <div id="calculated-area"></div>
         </div>
     </main>
