create tactic, save to db

--- a/code/public/Links/tactic.html
+++ b/code/public/Links/tactic.html
@@ -40,11 +40,19 @@
 
     <main>
         <div id='canvas'></div>
-        <div style="padding:10px">
-            <h1>Instructions:</h1>
-            <p>Use the "Open file" or the "Open URL" to upload an image <br> After it's uploaded, you may start creating your tactics with the provided tools, you can draw lines, spray, add text and even erase <br> Select "Color" and "Brush Size" for a better
-                personalization <br> Keep a backup after you finished drawing your tactic, by clicking "Save" so you can update or change the tactic later.</p>
-            <p>After you're done, you may now share this tactic with your team and/or group.</p>
+
+        <div style="display:flex; flex-direction: column;">
+            <div id='tactCreation' style="padding:10px"></div>
+            <div style="padding:10px">
+                <h1>Instructions:</h1>
+                <p>Use the "Open file" or the "Open URL" to upload an image <br> After it's uploaded, you may start creating your tactics with the provided tools, you can draw lines, spray, add text and even erase <br> Select "Color" and "Brush Size" for
+                    a better personalization <br> </p>
+                <p>After you're done, you may now share this tactic with your team and/or group.</p>
+            </div>
+
+        </div>
+
+
         </div>
     </main>
 
