--- a/code/public/Links/eventLobby.html
+++ b/code/public/Links/eventLobby.html
@@ -33,7 +33,7 @@
     </span>
 
 </header>
-
+  <span id='navmain'>
     <nav class="eventlobbynav"  id="eventlobbynav">
 
     </nav >
@@ -43,6 +43,7 @@
       
     </div>
     </main>
+  </span>
 
 </body>
 
