--- a/code/public/Links/map.html
+++ b/code/public/Links/map.html
@@ -27,7 +27,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>Show drawn polygon area</title>
+    <title>Tactical Combat Planner</title>
     <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no" />
 
 
