--- a/code/public/index.html
+++ b/code/public/index.html
@@ -3,9 +3,11 @@
 <head>
 
     <link rel="stylesheet" href="stylesheets/index.css">
+    <link rel="stylesheet" href="stylesheets/dropdown.css">
 
     <script src="javascripts/index.js"></script>
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="javascripts/notification.js"></script>
     <link rel="icon" href="images/on-off-button.png" type="image/x-icon">
 </head>
 
@@ -23,10 +25,10 @@
 
         </headernav>
 
-        <span id='userboxHeader'>
+        <span id='userboxHeader' onclick='toggleNotif()'>
             <span id='userimageHeader'><img id='userImage' src="images/userImage.png" height='50px'></span>
         <span id='userNameHeader'>John Doe</span>
-        
+        <span id='badgeContainer'></span>
         </span>
 
     </header>
