--- a/code/public/index.html
+++ b/code/public/index.html
@@ -64,7 +64,7 @@
     </div>
     <div class='infoboxes' id='eventinfo'>
 
-        <img class='testImg' src="images/airsoftteams.png">
+        <img class='testImg' src="https://media-cdn.tripadvisor.com/media/photo-s/07/72/4f/54/high-harthay-outdoor.jpg" />
 
         <div id='eventinfo' class='blackinfobox'>
             <div id='eventsTitle' class='iconblackbox'>events</div>
